2005-01-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tkfbox.tcl (IconList_Selection, IconList_Create):
	(IconList_Arrange): Assorted tk_getOpenFile fixes. [part of Bug 600313]

2005-01-12  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/event.n: Added section on predefined virtual events. [Bug 608115]

2005-01-11  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: fix to scrollbar height calculations
	of text widgets containing a single very long (wrapped) line.
	This fixes at least part of [Bug 1093631].

2005-01-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkObj.c (TkParsePadAmount):
	* generic/tkPack.c: Moved function to tkObj.c and rewrote so that it
	takes advantage of Tcl_Objs properly and cannot leave objects in an
	inconsistent state. [Bug 1098779]

2005-01-10  Joe English  <jenglish@users.sourceforge.net>
	* unix/Makefile.in, unix/configure.in, unix/tkConfig.sh.in:
	Remove ${DBGX}, ${TK_DBGX} from Tk build system [Patch 1081595].
	* unix/tcl.m4: re-synced with tcl/unix/tcl.m4
	* unix/configure: Regenerated.

2005-01-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkWindow.c (GetScreen): Make sure the result is reset on
	all error paths to stop strange errors. [Bug 697915]

2005-01-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/loadTk.n, doc/toplevel.n: Convert to other form of emacs
	mode control comment to prevent problems with old versions of
	man. [Bug 1085127]

2005-01-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (TkWinWmCleanup): clean up layered window class.
	This caused crash in reinit of Tk (as seen in plugin).

2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4, win/configure: update MSVC CFLAGS_OPT to -O2, remove
	-Gs (included in -O2) and -GD (outdated).  Use "link -lib" instead
	of "lib" binary and remove -YX for MSVC7 portability.  Add
	-fomit-frame-pointer for gcc OPT compiles. [Bug 1092952, 1091967]
